--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,5 +5,6 @@
 <div class="text-center">
     <h1 class="display-4">Curso Git y Git Hub</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-
+    <p> Texto adicional </p>
+    <h2> Subtitulo </h2>
 </div>
