Mejora en la interfaz de usuario en index y privacy.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,4 +7,9 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <p> Texto adicional </p>
     <h2> Subtitulo </h2>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+    </ul>
+    <div style="background-color: blue; width: 400px; height: 400px"></div>
 </div>
