--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -4,3 +4,5 @@
 <h1>@ViewData["Title"]</h1>
 
 <h3>Use this page to detail your site's privacy policy.</h3>
+
+<div style="background-color: green; width: 500px; height: 500px"></div>
