Creado link productos en rama productos

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Suscripcion">Suscripcion</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-whitw" asp-area="" asp-controller="Home" asp-action="Productos">Productos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
